# tunesort

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  package-deb.yml  release.yml
assets/: tunesort.desktop
src/: config.rs  library.rs  main.rs  metadata.rs  player.rs  ui.rs
